--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,300italic,400italic' rel="stylesheet" type="text/css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css" rel="stylesheet" />
+    <link href='<%= BASE_URL %>/src/styles/styles.css' rel="stylesheet" type="text/css">
+    <link href="<%= BASE_URL %>/src/styles/leaflet.css" rel="stylesheet" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>Vuetify</title>
+    <title>Система отслеживания заполнения мусорных контейнеров</title>
   </head>
   <body>
     <noscript>
